bootstrap/kong/02-helm.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kong
